fix search suggestion z-index

--- a/applications/fishing-map/src/features/search/Search.module.css
+++ b/applications/fishing-map/src/features/search/Search.module.css
@@ -41,7 +41,7 @@
   padding: var(--space-S);
   background-color: var(--color-white);
   box-shadow: var(--box-shadow);
-  z-index: 1;
+  z-index: 2;
   position: relative;
   border-bottom: var(--border);
 }
